// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableAssessment /> render empty criteria 1`] = `
<Card
  className="assessment-card"
>
  <Card.Section
    className="assessment-body"
  >
    <h3>
      Rubric
    </h3>
    <hr
      className="m-2.5"
    />
    <hr />
    <OverallFeedback />
  </Card.Section>
  <AssessmentActions />
</Card>
`;

exports[`<EditableAssessment /> render with criteria 1`] = `
<Card
  className="assessment-card"
>
  <Card.Section
    className="assessment-body"
  >
    <h3>
      Rubric
    </h3>
    <hr
      className="m-2.5"
    />
    <CriterionContainer
      criterion={
        {
          "name": "criterion1",
        }
      }
      feedback={
        <CriterionFeedback
          criterion={
            {
              "name": "criterion1",
            }
          }
          criterionIndex={0}
        />
      }
      input={
        <RadioCriterion
          criterion={
            {
              "name": "criterion1",
            }
          }
          criterionIndex={0}
        />
      }
      key="criterion1"
    />
    <CriterionContainer
      criterion={
        {
          "name": "criterion2",
        }
      }
      feedback={
        <CriterionFeedback
          criterion={
            {
              "name": "criterion2",
            }
          }
          criterionIndex={1}
        />
      }
      input={
        <RadioCriterion
          criterion={
            {
              "name": "criterion2",
            }
          }
          criterionIndex={1}
        />
      }
      key="criterion2"
    />
    <CriterionContainer
      criterion={
        {
          "name": "criterion3",
        }
      }
      feedback={
        <CriterionFeedback
          criterion={
            {
              "name": "criterion3",
            }
          }
          criterionIndex={2}
        />
      }
      input={
        <RadioCriterion
          criterion={
            {
              "name": "criterion3",
            }
          }
          criterionIndex={2}
        />
      }
      key="criterion3"
    />
    <hr />
    <OverallFeedback />
  </Card.Section>
  <AssessmentActions />
</Card>
`;
